production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcp-platform-website-ingress
  namespace: production-external # Ingress should be in the same namespace as the service
  annotations:
      kubernetes.io/ingressClassName: azure/application-gateway
      cert-manager.io/cluster-issuer: letsencrypt-production
      cert-manager.io/acme-challenge-type: http01
      nginx.ingress.kubernetes.io/enable-cors: "true"
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
      nginx.ingress.kubernetes.io/proxy-buffering: "off"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
  - hosts:
    - mcp-platform.dataeverything.ai
    secretName: mcp-platform-website-tls

  rules:
  - host: mcp-platform.dataeverything.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mcp-platform-website
            port:
              number: 80
